<resources>
    <string name="app_name">GigSuite</string>

    <string name="txtCadastrar">CADASTRAR</string>
    <string name="txtBuscar">BUSCAR</string>
    <string name="txtEntrar">ENTRAR</string>

    <string name="txtNome">NOME:</string>
    <string name="txtApelido">APELIDO:</string>
    <string name="txtEmail">* E-MAIL:</string>
    <string name="txtTelefone">TELEFONE:</string>
    <string name="txtDescricao">DESCRIÇÃO:</string>
    <string name="txtCategoria">CATEGORIA:</string>
    <string name="txtCpf">CPF:</string>
    <string name="txtUsuario">* USUÁRIO:</string>
    <string name="txtSenha">* SENHA:</string>
    <string name="txtSubCategoria">SUBCATEGORIA</string>

    <string name="txtLogradouro">LOGRADOURO</string>
    <string name="txtNumero">NUMERO</string>
    <string name="txtBairro">BAIRRO</string>
    <string name="txtCidade">CIDADE</string>
    <string name="txtUf">UF</string>
    <string name="txtCep">CEP</string>

    <string name="txtTermoUso">TERMOS DE USO</string>
    <string name="txtPerfil">PERFIL</string>
    <string name="txtFaleConosco">FALE CONOSCO</string>
    <string name="txtContato">CONTATO</string>


    <string-array name="categorias">
        <item>MUSICO</item>
        <item>FOTOGRAFO</item>
        <item>CINEGRAFISTA</item>
        <item>ROADIES</item>
        <item>PRODUTOR</item>
        <item>ILUMINACAO</item>
        <item>SONORIZACAO</item>
        <item>INGRESSOS</item>
        <item>PALCOS</item>
        <item>OUTROS</item>
    </string-array>

    <string-array name="subcategorias">
        <item>GUITARRISTA</item>
        <item>VIOLONISTA</item>
        <item>BAIXISTA</item>
        <item>BATERISTA</item>
        <item>TECLADISTA</item>
        <item>PERCUSSIONISTA</item>
        <item>CANTOR</item>
        <item>CORDAS</item>
        <item>TECNICO DE SOM</item>
        <item>METAIS E SOPRO</item>
        <item>DJ</item>
        <item>OUTROS</item>
    </string-array>

    <string-array name="uf">
        <item />
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>

    <string name="desc">Faça aqui uma breve descrição sua. Seus equipamentos, principais trabalhos e etc...</string>
    <string name="title_activity_menu">Gig Suite</string>

    <string name="navigation_drawer_open">Abrir Menu de Navegação</string>
    <string name="navigation_drawer_close">Fechar Menu de Navegação</string>

    <string name="action_settings">Configurações</string>
    <string name="txtSenhaConfirm">CONFIRME SUA SENHA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtHistorico">Histórico</string>
    <string name="title_activity_history">Histórico de Busca</string>
    <string name="text_bt_newUsers">Selecionar</string>

    <string name="opcao_aba">Abas</string>
    <string name="opcao_spinner">Spinner</string>
    <string name="opcao_pager">View Pager</string>
    <string-array name="secoes">
        <item>Contato</item>
        <item>Localização</item>
        <item>Mais Informações</item>
    </string-array>
    <array name="cores_bg">
        <item>#4c95af</item>
        <item>#4c95af</item>
        <item>#4c95af</item>
    </array>
    <array name="cores_texto">
        <item>#4c95af</item>
        <item>#4c95af</item>
        <item>#4c95af</item>
    </array>
    <string name="title_activity_map">Map</string>
</resources>
