<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b1b1b"
    android:padding="11dp"
    android:orientation="vertical"
    tools:context="com.example.flavi.gigsuite.TelaEndereco">

    <ImageView
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtLogradouro"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:id="@+id/editLogradouro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNumero"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:id="@+id/editNumero" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBairro"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:id="@+id/editBairro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCidade"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:id="@+id/editCidade" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtUf"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:entries="@array/categorias"
        android:id="@+id/editUf"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCep"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:id="@+id/editCep" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="#32CD32"
        android:layout_marginTop="15dp"
        android:id="@+id/btnCadastrar"
        android:text="@string/txtCadastrar"
        android:textSize="20dp"/>

</LinearLayout>
