<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b1b1b"
    android:padding="11dp"
    android:orientation="vertical"
    tools:context="com.example.flavi.gigsuite.CadastroUsuarioActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEmail"
        android:textColor="#E6E6FA"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:id="@+id/editEmail"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtUsuario"
        android:layout_marginTop="15dp"
        android:textColor="#E6E6FA"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:id="@+id/editUsuario"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSenha"
        android:layout_marginTop="15dp"
        android:textColor="#E6E6FA"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:id="@+id/editSenha"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="#32CD32"
        android:layout_marginTop="15dp"
        android:id="@+id/btnCadastrar"
        android:text="@string/txtCadastrar"
        android:textSize="20dp"/>

</LinearLayout>
