<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b1b1b"
    android:padding="11dp"
    android:orientation="vertical"
    tools:context="com.example.flavi.gigsuite.CadastroPerfilActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:text="Atualize seu cadastro!"
        android:textColor="#fff"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ID:"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:id="@+id/editId"
        android:maxLength="36"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NOME:"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:id="@+id/editNome"
        android:maxLength="36"/>

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="APELIDO:"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:id="@+id/editApelido"
        android:maxLength="36"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCategoria"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:entries="@array/categorias"
        android:id="@+id/editCategoria"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSubCategoria"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:entries="@array/subcategorias"
        android:id="@+id/editSubCategoria"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TELEFONE:"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:id="@+id/editTelefone"
        android:inputType="phone"
        android:maxLength="36"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDescricao"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#E6E6FA"
        android:inputType="textMultiLine"
        android:hint="@string/desc"
        android:textSize="10dp"
        android:textStyle="italic"
        android:id="@+id/editDescricao"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SITE:"
        android:textColor="#E6E6FA"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6FA"
        android:id="@+id/editSite"
        android:maxLength="36"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="#32CD32"
        android:layout_marginTop="15dp"
        android:id="@+id/btnCadastrar"
        android:text="ATUALIZAR"
        android:textSize="20dp"/>

</LinearLayout>
